src/br/unipe/compilador/analisador/Gramatica.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Gramatica.java */
package br.unipe.compilador.analisador;
import br.unipe.compilador.analisador.CustomNode.TIPO;

public class Gramatica/*@bgen(jjtree)*/implements GramaticaTreeConstants, GramaticaConstants {/*@bgen(jjtree)*/
  protected JJTGramaticaState jjtree = new JJTGramaticaState();Controlador control = new Controlador();

  final public SimpleNode Programa() throws ParseException {
    trace_call("Programa");
    try {
 /*@bgen(jjtree) Programa */
  Programa jjtn000 = new Programa(JJTPROGRAMA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        Funcao();
        jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Programa");
    }
  }

  final public void Funcao() throws ParseException {
    trace_call("Funcao");
    try {
 /*@bgen(jjtree) Funcao */
  Funcao jjtn000 = new Funcao(JJTFUNCAO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
  CustomNode.TIPO tipo;
      try {
        tipo = TipoRetorno();
        t = jj_consume_token(ID);
        ParametrosFuncao();
        CorpoFuncao();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    control.declaracao(tipo, t, true, true);
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Funcao");
    }
  }

  final public TIPO TipoRetorno() throws ParseException {
    trace_call("TipoRetorno");
    try {
 /*@bgen(jjtree) TipoRetorno */
  TipoRetorno jjtn000 = new TipoRetorno(JJTTIPORETORNO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VOID:
          jj_consume_token(VOID);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return TIPO.NULL;}
          break;
        case INT:
          jj_consume_token(INT);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return TIPO.INT;}
          break;
        case FLOAT:
          jj_consume_token(FLOAT);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return TIPO.FLOAT;}
          break;
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("TipoRetorno");
    }
  }

  final public void ParametrosFuncao() throws ParseException {
    trace_call("ParametrosFuncao");
    try {
      jj_consume_token(PARENTESE_ABRIR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case FLOAT:
        ParametroFuncao();
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case VIRGULA:
            ;
            break;
          default:
            jj_la1[1] = jj_gen;
            break label_1;
          }
          jj_consume_token(VIRGULA);
          ParametroFuncao();
        }
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      jj_consume_token(PARENTESE_FECHAR);
    } finally {
      trace_return("ParametrosFuncao");
    }
  }

  final public void ParametroFuncao() throws ParseException {
    trace_call("ParametroFuncao");
    try {
 /*@bgen(jjtree) ParametroFuncao */
  ParametroFuncao jjtn000 = new ParametroFuncao(JJTPARAMETROFUNCAO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
  CustomNode.TIPO tipo;
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
          jj_consume_token(INT);
      tipo = CustomNode.TIPO.INT;
          break;
        case FLOAT:
          jj_consume_token(FLOAT);
      tipo = CustomNode.TIPO.FLOAT;
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        t = jj_consume_token(ID);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    control.declaracao(tipo, t);
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("ParametroFuncao");
    }
  }

  final public void CorpoFuncao() throws ParseException {
    trace_call("CorpoFuncao");
    try {
 /*@bgen(jjtree) CorpoFuncao */
  CorpoFuncao jjtn000 = new CorpoFuncao(JJTCORPOFUNCAO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(CHAVE_ABRIR);
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INT:
          case FLOAT:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_2;
          }
          Declaracao();
          jj_consume_token(PONTO_VIRGULA);
        }
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case RETURN:
          case WHILE:
          case IF:
          case BREAK:
          case PONTO_VIRGULA:
          case ID:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_3;
          }
          Comando();
        }
        jj_consume_token(CHAVE_FECHAR);
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("CorpoFuncao");
    }
  }

  final public void Comando() throws ParseException {
    trace_call("Comando");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        Atribuicao();
        jj_consume_token(PONTO_VIRGULA);
        break;
      case IF:
        If();
        break;
      case WHILE:
        While();
        break;
      case RETURN:
        Return();
        jj_consume_token(PONTO_VIRGULA);
        break;
      case BREAK:
        jj_consume_token(BREAK);
        jj_consume_token(PONTO_VIRGULA);
        break;
      case PONTO_VIRGULA:
        jj_consume_token(PONTO_VIRGULA);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("Comando");
    }
  }

  final public void Declaracao() throws ParseException {
    trace_call("Declaracao");
    try {
 /*@bgen(jjtree) Declaracao */
  Declaracao jjtn000 = new Declaracao(JJTDECLARACAO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
  CustomNode.TIPO tipo;
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
          jj_consume_token(INT);
      tipo = TIPO.INT;
          break;
        case FLOAT:
          jj_consume_token(FLOAT);
      tipo = TIPO.FLOAT;
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        t = jj_consume_token(ID);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ATRIBUICAO:
          jj_consume_token(ATRIBUICAO);
          ExpressaoMatematica();
          break;
        default:
          jj_la1[8] = jj_gen;
          ;
        }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    control.declaracao(tipo, t);
    jjtn000.jjtSetValue(t);
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Declaracao");
    }
  }

  final public void Atribuicao() throws ParseException {
    trace_call("Atribuicao");
    try {
 /*@bgen(jjtree) Atribuicao */
  Atribuicao jjtn000 = new Atribuicao(JJTATRIBUICAO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
      try {
        t = jj_consume_token(ID);
        ValorAtribuicao();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.jjtSetValue(t);
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Atribuicao");
    }
  }

  final public void ValorAtribuicao() throws ParseException {
    trace_call("ValorAtribuicao");
    try {
      jj_consume_token(ATRIBUICAO);
      ExpressaoMatematica();
    } finally {
      trace_return("ValorAtribuicao");
    }
  }

  final public void ExpressaoMatematica() throws ParseException {
    trace_call("ExpressaoMatematica");
    try {
 /*@bgen(jjtree) ExpressaoMatematica */
  ExpressaoMatematica jjtn000 = new ExpressaoMatematica(JJTEXPRESSAOMATEMATICA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        TermoMatematico();
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SOMAR:
          case SUBTRAIR:
            ;
            break;
          default:
            jj_la1[9] = jj_gen;
            break label_4;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SOMAR:
            jj_consume_token(SOMAR);
                Adicao jjtn001 = new Adicao(JJTADICAO);
                boolean jjtc001 = true;
                jjtree.openNodeScope(jjtn001);
            try {
              TermoMatematico();
            } catch (Throwable jjte001) {
                if (jjtc001) {
                  jjtree.clearNodeScope(jjtn001);
                  jjtc001 = false;
                } else {
                  jjtree.popNode();
                }
                if (jjte001 instanceof RuntimeException) {
                  {if (true) throw (RuntimeException)jjte001;}
                }
                if (jjte001 instanceof ParseException) {
                  {if (true) throw (ParseException)jjte001;}
                }
                {if (true) throw (Error)jjte001;}
            } finally {
                if (jjtc001) {
                  jjtree.closeNodeScope(jjtn001,  2);
                }
            }
            break;
          case SUBTRAIR:
            jj_consume_token(SUBTRAIR);
                 Subtracao jjtn002 = new Subtracao(JJTSUBTRACAO);
                 boolean jjtc002 = true;
                 jjtree.openNodeScope(jjtn002);
            try {
              TermoMatematico();
            } catch (Throwable jjte002) {
                 if (jjtc002) {
                   jjtree.clearNodeScope(jjtn002);
                   jjtc002 = false;
                 } else {
                   jjtree.popNode();
                 }
                 if (jjte002 instanceof RuntimeException) {
                   {if (true) throw (RuntimeException)jjte002;}
                 }
                 if (jjte002 instanceof ParseException) {
                   {if (true) throw (ParseException)jjte002;}
                 }
                 {if (true) throw (Error)jjte002;}
            } finally {
                 if (jjtc002) {
                   jjtree.closeNodeScope(jjtn002,  2);
                 }
            }
            break;
          default:
            jj_la1[10] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("ExpressaoMatematica");
    }
  }

  final public void TermoMatematico() throws ParseException {
    trace_call("TermoMatematico");
    try {
      FatorMatematico();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MULTIPLICAR:
        case DIVIDIR:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_5;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MULTIPLICAR:
          jj_consume_token(MULTIPLICAR);
                      Multiplicacao jjtn001 = new Multiplicacao(JJTMULTIPLICACAO);
                      boolean jjtc001 = true;
                      jjtree.openNodeScope(jjtn001);
          try {
            FatorMatematico();
          } catch (Throwable jjte001) {
                      if (jjtc001) {
                        jjtree.clearNodeScope(jjtn001);
                        jjtc001 = false;
                      } else {
                        jjtree.popNode();
                      }
                      if (jjte001 instanceof RuntimeException) {
                        {if (true) throw (RuntimeException)jjte001;}
                      }
                      if (jjte001 instanceof ParseException) {
                        {if (true) throw (ParseException)jjte001;}
                      }
                      {if (true) throw (Error)jjte001;}
          } finally {
                      if (jjtc001) {
                        jjtree.closeNodeScope(jjtn001,  2);
                      }
          }
          break;
        case DIVIDIR:
          jj_consume_token(DIVIDIR);
                Divisao jjtn002 = new Divisao(JJTDIVISAO);
                boolean jjtc002 = true;
                jjtree.openNodeScope(jjtn002);
          try {
            FatorMatematico();
          } catch (Throwable jjte002) {
                if (jjtc002) {
                  jjtree.clearNodeScope(jjtn002);
                  jjtc002 = false;
                } else {
                  jjtree.popNode();
                }
                if (jjte002 instanceof RuntimeException) {
                  {if (true) throw (RuntimeException)jjte002;}
                }
                if (jjte002 instanceof ParseException) {
                  {if (true) throw (ParseException)jjte002;}
                }
                {if (true) throw (Error)jjte002;}
          } finally {
                if (jjtc002) {
                  jjtree.closeNodeScope(jjtn002,  2);
                }
          }
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("TermoMatematico");
    }
  }

  final public void FatorMatematico() throws ParseException {
    trace_call("FatorMatematico");
    try {
      if (jj_2_1(3)) {
        jj_consume_token(PARENTESE_ABRIR);
        ExpressaoMatematica();
        jj_consume_token(PARENTESE_FECHAR);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUM_INTEIRO:
        case NUM_PF:
        case ID:
          TipoMatematico();
          break;
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("FatorMatematico");
    }
  }

  final public void TipoMatematico() throws ParseException {
    trace_call("TipoMatematico");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        Identificador();
        break;
      case NUM_INTEIRO:
      case NUM_PF:
        Numero();
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("TipoMatematico");
    }
  }

  final public void Identificador() throws ParseException {
    trace_call("Identificador");
    try {
 /*@bgen(jjtree) Identificador */
  Identificador jjtn000 = new Identificador(JJTIDENTIFICADOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
      try {
        t = jj_consume_token(ID);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setTipo(control.getTipo(t));
    jjtn000.jjtSetValue(t);
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Identificador");
    }
  }

  final public void Numero() throws ParseException {
    trace_call("Numero");
    try {
 /*@bgen(jjtree) Numero */
  Numero jjtn000 = new Numero(JJTNUMERO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUM_INTEIRO:
          t = jj_consume_token(NUM_INTEIRO);
      jjtn000.setTipo(CustomNode.TIPO.INT);
          break;
        case NUM_PF:
          t = jj_consume_token(NUM_PF);
      jjtn000.setTipo(CustomNode.TIPO.FLOAT);
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.jjtSetValue(t);
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Numero");
    }
  }

  final public void If() throws ParseException {
    trace_call("If");
    try {
 /*@bgen(jjtree) If */
  If jjtn000 = new If(JJTIF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(IF);
        jj_consume_token(PARENTESE_ABRIR);
        ExpressaoLogica();
        jj_consume_token(PARENTESE_FECHAR);
        jj_consume_token(CHAVE_ABRIR);
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case RETURN:
          case WHILE:
          case IF:
          case BREAK:
          case PONTO_VIRGULA:
          case ID:
            ;
            break;
          default:
            jj_la1[16] = jj_gen;
            break label_6;
          }
          Comando();
        }
        jj_consume_token(CHAVE_FECHAR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ELSE:
          Else();
          break;
        default:
          jj_la1[17] = jj_gen;
          ;
        }
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("If");
    }
  }

  final public void Else() throws ParseException {
    trace_call("Else");
    try {
 /*@bgen(jjtree) Else */
  Else jjtn000 = new Else(JJTELSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(ELSE);
        jj_consume_token(CHAVE_ABRIR);
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case RETURN:
          case WHILE:
          case IF:
          case BREAK:
          case PONTO_VIRGULA:
          case ID:
            ;
            break;
          default:
            jj_la1[18] = jj_gen;
            break label_7;
          }
          Comando();
        }
        jj_consume_token(CHAVE_FECHAR);
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Else");
    }
  }

  final public void While() throws ParseException {
    trace_call("While");
    try {
 /*@bgen(jjtree) While */
  While jjtn000 = new While(JJTWHILE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(WHILE);
        jj_consume_token(PARENTESE_ABRIR);
        ExpressaoLogica();
        jj_consume_token(PARENTESE_FECHAR);
        jj_consume_token(CHAVE_ABRIR);
        label_8:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case RETURN:
          case WHILE:
          case IF:
          case BREAK:
          case PONTO_VIRGULA:
          case ID:
            ;
            break;
          default:
            jj_la1[19] = jj_gen;
            break label_8;
          }
          Comando();
        }
        jj_consume_token(CHAVE_FECHAR);
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("While");
    }
  }

  final public void Return() throws ParseException {
    trace_call("Return");
    try {
 /*@bgen(jjtree) Return */
  Return jjtn000 = new Return(JJTRETURN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(RETURN);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PARENTESE_ABRIR:
        case NUM_INTEIRO:
        case NUM_PF:
        case ID:
          ExpressaoMatematica();
          break;
        default:
          jj_la1[20] = jj_gen;
          ;
        }
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Return");
    }
  }
